[package]
name = "cryptopals"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Victor Ermolaev <victorermolaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
anyhow = "1.0.33"
openssl = "0.10.30"
